--- a/deck-of-cards/index.html
+++ b/deck-of-cards/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="get_card">Draw a Card</button>
+    <div id="card_pile"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="cards.js"></script>
